# Easyn

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
OpenTimer/: CMakeLists.txt
OpenTimer/example/incremental/: incremental
OpenTimer/example/optimizer/: optimizer
OpenTimer/example/simple/: simple
OpenTimer/example/sizer/: sizer
OpenTimer/example/unit/: unit
OpenTimer/ot/: config.hpp  headerdef.hpp
OpenTimer/ot/json/: json.hpp
OpenTimer/ot/timer/: gate.hpp  net.cpp  net.hpp  pin.hpp  timer.cpp  timer.hpp
OpenTimer/unittest/: path  utility
abacus/: CMakeLists.txt  main.cpp  main.d
abacus/Legalizer/: Legalizer.cpp  Legalizer.d  Legalizer.hpp
abacus/Parser/: Parser.cpp  Parser.d  Parser.hpp
abacus/ResultWriter/: ResultWriter.d
abacus/Structure/: Data.hpp
examples/benchmarks/: NanGate_15nm_OCL_typical_conditional_nldm_12T.lib  NanGate_15nm_OCL_typical_conditional_nldm_8T.lib  NanGate_15nm_OCL_typical_conditional_nldm_8T_12T.genlib  NanGate_15nm_OCL_typical_conditional_nldm_8T_12T.lib  NangateOpenCellLibrary_typical.lib  OSU035.genlib  adder.aig  bar.aig  div.aig  hyp.aig  log2.aig  max.aig  mix_cell.lef  mockturtle-aig4-cache.db  multiplier.aig  sin.aig  sqrt.aig  square.aig  test1.blif
examples/benchmarks/adder/: adder.mapped.sdc  adder.placed.def  adder.placed.sdc  adder.placed.spef  adder.placed.v  adder.v  adder_core.json  adder_def_cell.json  adder_net.json  adder_slack_report.txt  run.sh
examples/eval/: def_coord_update.py  mmmc.tcl  run_new_remap0.tcl
run/: README.md  flow_place.sh  flow_remap.sh  generate_row_assignment_file.py  set_innovus_tcl.py
run/bak/: bench.mapped.sdc
run/innovus/: mmmc.tcl  run_innovus.tcl
run/util/: gate_count.py  liberty-to-genlib.py  modify_sdc.py  visualize_placement.py
src/: Hashtable.hpp  PlaceInfo.cpp  PlaceInfo.hpp  dp_solver.cpp  dp_solver.hpp  kmeans.hpp  main.cpp  new_dpsolver.cpp  new_dpsolver.hpp  pareto.h  resynthesis.cpp  resynthesis.hpp  row_base.cpp  row_base.hpp  timing.cpp  timing.hpp  util.cpp  util.hpp
src/gen_verilog/: gen_verilog.cpp
src/test/: test.cpp
src/timing_after_remap/: timing_after_remap.cpp
src/timing_report/: get_timing_report.cpp
util/: calculate_HPWL.py  generate_row_assignment_file.py  parse_timing_report.py  test.sh  visualize_placement.py
(+130 files in other folders)
